# scs-eigen

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Constraint_8h.html  Cost_8h.html  LICENSE  LinearConstraint_8h.html  LinearCost_8h.html  Logger_8h.html  Math_8h.html  MathematicalProgram_8h.html  QuadraticConstraint_8h.html  QuadraticCost_8h.html  README.md  SettingsImpl_8h.html  Settings_8h.html  Solution_8h.html  Solver_8h.html  _constraint_8h.html  _cost_8h.html  _linear_constraint_8h.html  _linear_cost_8h.html  _logger_8h.html  _math_8h.html  _mathematical_program_8h.html  _quadratic_constraint_8h.html  _quadratic_cost_8h.html  _settings_8h.html  _settings_impl_8h.html  _solution_8h.html  _solver_8h.html  annotated.html  classScsEigen_1_1Constraint.html  classScsEigen_1_1Cost.html  classScsEigen_1_1LinearConstraint.html  classScsEigen_1_1LinearCost.html  classScsEigen_1_1Logger.html  classScsEigen_1_1MathematicalProgram.html  classScsEigen_1_1QuadraticConstraint.html  classScsEigen_1_1QuadraticCost.html  (+39 more)
cmake/: AddScsEigenUnitTest.cmake  Catch2Main.cpp.in  ScsEigenDependencies.cmake  ScsEigenFindOptionalDependencies.cmake
docs/: Doxyfile  Doxyfile-mcss  conf.py
src/: CMakeLists.txt
src/ScsEigen/: CMakeLists.txt
src/ScsEigen/include/ScsEigen/: Constraint.h  Cost.h  LinearConstraint.h  LinearCost.h  Logger.h  Math.h  MathematicalProgram.h  QuadraticConstraint.h  QuadraticCost.h  Settings.h  Solution.h  Solver.h
src/ScsEigen/include/ScsEigen/impl/: SettingsImpl.h
src/ScsEigen/src/: Constraint.cpp  Cost.cpp  LinearConstraint.cpp  LinearCost.cpp  Logger.cpp  Math.cpp  MathematicalProgram.cpp  QuadraticConstraint.cpp  QuadraticCost.cpp  Settings.cpp  Solution.cpp  Solver.cpp
xml/: Constraint_8h.xml  Cost_8h.xml  LinearConstraint_8h.xml  LinearCost_8h.xml  Logger_8h.xml  Math_8h.xml  MathematicalProgram_8h.xml  QuadraticConstraint_8h.xml  QuadraticCost_8h.xml  SettingsImpl_8h.xml  Settings_8h.xml  Solution_8h.xml  Solver_8h.xml  _constraint_8h.xml  _cost_8h.xml  _linear_constraint_8h.xml  _linear_cost_8h.xml  _logger_8h.xml  _math_8h.xml  _mathematical_program_8h.xml  _quadratic_constraint_8h.xml  _settings_8h.xml  (+46 more)
(+8 files in other folders)
